[package]
name = "repomonc"
version = "0.1.0"
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
clap = "2.29.0"
error-chain = "0.11.0"
futures = "0.1.17"
tokio-core = "0.1.11"
tokio-io = "0.1.4"
bytes = "0.4.5"
repomon-config = "0.3.1"
bincode = "0.9.2"
