[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "The repomon client"
documentation = "http://docs.rs/repomonc"
homepage = "http://docs.rs/repomonc"
keywords = ["git", "repository", "monitor", "client"]
license = "MIT/Apache-2.0"
name = "repomonc"
readme = "README.md"
repository = "https://github.com/rustyhorde/repomonc"
version = "0.1.0"

[dependencies]
clap = "2.29.0"
error-chain = "0.11.0"
futures = "0.1.17"
tokio-core = "0.1.11"
tokio-io = "0.1.4"
bytes = "0.4.5"
repomon = "0.1.0"
bincode = "0.9.2"

[patch.crates-io]
repomon = { path = '../repomon' }